<resources>
    <string name="app_name">final easyshop</string>
    <string name="TODO">TODO</string>
    <string name="email">Enter Your Email Id</string>
    <string name="password">   Enter your Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="ALREADY">Already have an account? Login</string>
    <string name="explore">EXPLORE</string>
    <string name="home">HOME</string>
    <string name="my_profile">PROFILE</string>
    <string name="sell">SELL</string>
    <string name="logout">LOGOUT</string>
    <string name="navigation_drawer_open">OPEN</string>
    <string name="navigation_drawer_close">CLOSE</string>
    <string name="bookname">Book Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="choose">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="book_name">Enter the name of the Book</string>
    <string name="Price">Enter the price</string>
    <string name="Book_Description">Enter the book description</string>
    <string name="year">Year</string>
    <string name="Year">Enter the Year</string>
    <string name="Description">Enter the Description</string>
    <string name="Brand">Enter the brand name</string>
    <string name="brand">Brand Name</string>
    <string name="product">Product Name</string>
    <string name="ProductName">Enter the product name</string>
    <string name="brandname">Brand Name</string>
    <string name="BrandName">Enter the brand name</string>
    <string name="title">Title</string>
    <string name="Title">Enter the title</string>
    <string name="size">Size</string>
    <string name="Size">Enter the size in sq feet</string>
    <string name="go_back">BACK</string>
    <string name="reset_pass">RESET</string>
    <string name="purpose">PURPOSE</string>
    <string name="intro">A platform  to buy and sell  goods .</string>
    <string name="our_team">Our Team</string>
    <string name="a">\"Name    :    Shilpa         \"</string>
    <string name="b">\"Name    :    Namratha       \"</string>
</resources>