<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".About">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16sp">

        <TextView
            android:id="@+id/purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:text="@string/purpose"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/purpose_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purpose"
            android:text="@string/intro"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purpose_text"
            android:layout_marginTop="30sp"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:text="@string/our_team"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/team"
            android:layout_marginTop="10sp"
            android:text="@string/a"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/team"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="1sp"
            android:layout_marginLeft="1sp"
            android:layout_marginTop="198sp"
            android:text="@string/b"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="133dp"
            android:layout_height="143dp"
            android:layout_below="@+id/team"
            android:layout_marginStart="37sp"
            android:layout_marginLeft="37sp"
            android:layout_marginTop="206sp"
            android:layout_toEndOf="@+id/text"
            android:layout_toRightOf="@+id/text"
            android:background="@drawable/shil" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="134dp"
            android:layout_height="139dp"
            android:layout_below="@+id/team"
            android:layout_marginStart="1sp"
            android:layout_marginLeft="1sp"
            android:layout_marginTop="38dp"
            android:layout_toEndOf="@+id/text1"
            android:layout_toRightOf="@+id/text1"
            android:background="@drawable/nam" />


    </RelativeLayout>
</ScrollView>